--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,14 @@ install:
     pango
     asciidoctor-mathematical
     asciidoctor-revealjs
-    asciidoctor-pdf
+    pygments.rb
+- gem install asciidoctor-pdf --pre
 
 script:
 - asciidoctor-revealjs --destination-dir "$SLIDES_DIR" index.adoc
-- asciidoctor-pdf --out-file "${SLIDES_DIR}/${PDF_NAME}.pdf" index.adoc
+- asciidoctor-pdf
+  --require asciidoctor-mathematical --attribute mathematical-format=svg
+  --out-file "${SLIDES_DIR}/${PDF_NAME}.pdf" index.adoc
 
 deploy:
   provider: pages
