--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+branches:
+  only:
+  - master
+
 language: ruby
 dist: xenial
 addons:
   apt:
     packages:
     - graphviz
+
 env:
 - SLIDES_DIR=slides PDF_NAME=template
 
@@ -37,9 +42,11 @@ deploy:
     branch: master
 
 notifications:
-  webhooks:
-    urls:
-    - $GITTER_WEBHOOK
+  slack:
+    rooms:
+    - $SLACK_TOKEN
     on_success: change
     on_failure: always
-    on_start: never
+    on_start:   never
+    on_cancel:  never
+    on_error:   always
