--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,15 @@ notifications:
   slack:
     rooms:
     - $SLACK_TOKEN
-    on_success: change
+    on_success: always
+    on_failure: always
+    on_start:   never
+    on_cancel:  never
+    on_error:   always
+  webhooks:
+    urls:
+    - $GITTER_WEBHOOK
+    on_success: always
     on_failure: always
     on_start:   never
     on_cancel:  never
