--- a/.travis.yml
+++ b/.travis.yml
@@ -4,53 +4,42 @@ addons:
   apt:
     packages:
     - graphviz
-
+cache:
+  directories:
+  - "/home/travis/.rvm/"
 env:
-- SLIDES_DIR=slides PDF_NAME=template
-
+  global:
+  - SLIDES_DIR=slides PDF_NAME=template
 install:
-- gem install
-    pango
-    rouge
-    asciidoctor
-    asciidoctor-diagram
-    asciidoctor-mathematical
-    asciidoctor-revealjs
-    asciimath
+- gem install pango rouge asciidoctor asciidoctor-diagram
+  asciidoctor-mathematical asciidoctor-revealjs asciimath
 - gem install asciidoctor-pdf --pre
 - git clone https://github.com/hakimel/reveal.js.git "$SLIDES_DIR/reveal.js"
 - pushd "$SLIDES_DIR/reveal.js" && npm install && popd
-
 script:
 - asciidoctor-revealjs --destination-dir "$SLIDES_DIR" index.adoc
 - asciidoctor-pdf
-    --require asciidoctor-mathematical --attribute mathematical-format=svg
-    --out-file "${SLIDES_DIR}/${PDF_NAME}.pdf" index.adoc
-
+  --require asciidoctor-mathematical --attribute mathematical-format=svg
+  --out-file "${SLIDES_DIR}/${PDF_NAME}.pdf" index.adoc
 deploy:
   provider: pages
-  github_token: $GITHUB_TOKEN
+  github_token: "$GITHUB_TOKEN"
   committer_from_gh: true
   skip_cleanup: true
   keep_history: true
-  local_dir: $SLIDES_DIR
+  local_dir: "$SLIDES_DIR"
   on:
     branch: master
-
 notifications:
   slack:
     rooms:
-    - $SLACK_TOKEN
+    - "$SLACK_TOKEN"
+    on_start: never
     on_success: always
     on_failure: always
-    on_start:   never
-    on_cancel:  never
-    on_error:   always
   webhooks:
     urls:
-    - $GITTER_WEBHOOK
+    - "$GITTER_WEBHOOK"
+    on_start: never
     on_success: always
     on_failure: always
-    on_start:   never
-    on_cancel:  never
-    on_error:   always
